# VTensor

./: .bazelrc  .buildinfo  .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE  clang.yaml  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  test.py
.doctrees/: environment.pickle  index.doctree  installation.doctree
.doctrees/api/: index.doctree
.doctrees/tutorials/: basics.doctree  index.doctree  io.doctree  kernel.doctree  memory.doctree
.github/: CODEOWNERS
.github/workflows/: sphinx.yml
_sources/: index.rst.txt
_sources/tutorials/: index.rst.txt  io.rst.txt  kernel.rst.txt
api/: index.html
api/core/: astype.html  broadcast.html  broadcast_to.html  cutensor.html  index.html  iterator.html  mempool.html  operator.html  print.html  proxy_cond.html  proxy_slice.html  slice.html  tensor.html
api/generator/: arange.html  diag.html  eye.html  index.html  ones.html  tri.html  tril.html  triu.html  zeros.html
api/linalg/: cholesky.html  cublas.html  cusolver.html  dot.html  index.html  inv.html  matmul.html  pinv.html  product.html  svd.html
api/logical/: all.html  any.html  index.html  where.html
api/math/: exp.html  expand_dims_lhs.html  expand_dims_rhs.html  index.html  max.html  maximum.html  mean.html  min.html  minimum.html  moveaxis.html  power.html  reduce.html  sort.html  sqrt.html  sum.html  swapaxes.html  transpose.html  vander.html
api/memory/: ascontiguoustensor.html  asfortrantensor.html  astensor.html  asvector.html  asxarray.html  copy.html  index.html  load.html  save.html
api/random/: curand.html  index.html  normal.html  rand.html
api/time/: index.html  time.html
benchmark/: BUILD  benchmark.cc
docs/: CNAME  Doxyfile.in  requirements.txt
docs/source/: conf.py  index.rst  installation.rst
examples/: BUILD  checkpoint.cc  cutensor.cc  io_test.cc  monte_carlo.cc  pinned_memory.cc
html/: genindex.html  index.html  objects.inv
html/tutorials/: basics.html  index.html  memory.html
lib/: BUILD  vtensor.hpp
lib/core/: BUILD  assertions.hpp  (+12 more)
tutorials/: basics.html  index.html  io.html  kernel.html  memory.html
(+273 files in other folders)
