module(
    name = "vtensor",
    version = "1.0",
    compatibility_level = 1
)

bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "google_benchmark", version = "1.8.5")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "rules_cuda", version = "0.2.3")
bazel_dep(name = "spdlog", version = "1.14.1")

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "",
)
use_repo(cuda, "local_cuda")

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_archive(
    name = "rmm",
    sha256 = "00e74a0445042c489b8174b6eaa759d41655561c317e9a04ab4a73cddde619c0",
    strip_prefix = "rmm-24.08.00",
    urls = ["https://github.com/rapidsai/rmm/archive/refs/tags/v24.08.00.zip"],
    build_file = "//third_party:rmm.bazel",
)

http_archive(
    name = "nvtx",
    sha256 = "dbf307ce0e5b0f6ceacf37d65ca7a70e9a545d4162f824e8c0ac7b86f5640aa4",
    strip_prefix = "NVTX-3.1.0",
    urls = ["https://github.com/NVIDIA/NVTX/archive/refs/tags/v3.1.0.zip"],
    build_file = "//third_party:nvtx.bazel",
)

http_archive(
    name = "thread_pool",
    sha256 = "bd396440eeab4b55c3e8798b5baded455025385e241dc4a8c0f7a17705c98ee2",
    strip_prefix = "thread-pool-master",
    urls = ["https://github.com/bshoshany/thread-pool/archive/refs/heads/master.zip"],
    build_file = "//third_party:thread_pool.bazel",
)

http_archive(
    name = "xtl",
    sha256 = "ce4ec05202e8211ec84ae16c19ed5a3bba1344db65e3495f0d83569babb1c21f",
    strip_prefix = "xtl-master",
    urls = ["https://github.com/xtensor-stack/xtl/archive/refs/heads/master.zip"],
    build_file = "//third_party:xtl.bazel",
)

http_archive(
    name = "xtensor",
    sha256 = "a7d31716ee0d0d82f33c70976e0ec52a78bbbc3e337a51d58da76d8af224ebf9",
    strip_prefix = "xtensor-0.25.0",
    urls = ["https://github.com/xtensor-stack/xtensor/archive/refs/tags/0.25.0.zip"],
    build_file = "//third_party:xtensor.bazel",
)